# cpp-delimited-continuation

./: .gitignore  CMakeLists.txt  README.md  Tupfile  callyield.cpp  shiftreset.cpp
example/lazy/: simple.cpp
include/continuation/lazy/: Expression.hpp  Reset.hpp  Shift.hpp  ShiftReset.hpp  ShiftResetExpression.hpp
include/continuation/lazy/detail/: DelimitedExpression.hpp  ExpressionEvaluator.hpp  Range.hpp  ShiftResetExpression.hpp  ShiftResetTraits.hpp
include/continuation/lazy/detail/context/: Placeholder.hpp
include/continuation/lazy/detail/domain/: ShiftReset.hpp
include/continuation/lazy/detail/grammar/: CaptureExtractor.hpp  DelimitedExpression.hpp
include/continuation/lazy/detail/tag/: Foreach.hpp  Placeholder.hpp  Reset.hpp  Shift.hpp
include/continuation/lazy/detail/transform/: Placeholder.hpp  Range.hpp
include/functional/: LambdaTraits.hpp
